2009-03-04
Worked on db_playlist module, mostly working just needs some tweaks

2009-03-03
Added db_alias module to handle the aliases, although it is semi-incomplete
module::out() methods can only remove header declarations, they cannot set them, that is controlled by the plugin that calls it
Cron now doesn't clean when a directory is unmounted or missing
Site now completely directory separator independant, it stores all files with / in between directories and all system calls replace the / with DIRECTORY_SEPARATOR

2009-03-02
Made cleanup more efficient by creating a THREASHOLD constant for how many times the cron should run before cleaning up
Also cleanup will fire when physical directories are changed and it is detected by the db_watch_list module, so they will no longer clean up when just adding new files to database
Found that vlc has even more transcoding errors when the bitrate is being downscaled, this may screw up the client player responsiveness
Fixed a problem with the db_watch_list module, if a directory in the db_watch list was searched but was never removed, it would recurse that directory infinitely
Set the site up so it can be run minimalistically across a network share
Fixed some issues with cron.php and common.php
Replaced most REGEXP queries with a series of LEFT and LOCATE modifiers to select files from paths, much faster!

2009-02-27
db_artists module now shows albums from an artist also has $all$ option that shows all the songs by that artist
Added log_error() function that prints out the cron messages but only to cron
Got files to be added when they are browsed, it is an imperfect system due to the way the default template works, folders need to be immediately browsable

2009-02-26
Moved Accept-Ranges back to the file.php plugin!  Modules should not be in control of output, only getting information from database